<resources>
    <string name="app_name">Shared Grocery List</string>
    <string name="main_register">REGISTER</string>
    <string name="main_already_registered">Already Registered? <b>Sign In</b></string>
    <string name="main_email">Email</string>
    <string name="main_password">Password</string>
    <string name="main_login">login</string>
    <string name="main_no_account">Don\'t have an account? <b>Sign Up</b></string>
    <string name="list_buy">Buy Selected Items</string>
    <string name="list_add_person">Add User</string>
    <string name="list_add_item">Add Item</string>
    <string name="add_grocery_item">Grocery Item</string>
    <string name="add_to_list">Add To Shopping List</string>
    <string name="sample_grocery_item">Sample grocery item</string>
    <string name="your_grocery_list">Your Grocery List</string>
    <string name="add_to_friend_list">add to friend list</string>
    <string name="nickname">Nickname</string>
</resources>